# tzchat

./: '  .create_systemd.sh  .gitignore  Cargo.toml  bugs.md  feature_requests.md
.github/workflows/: deploy-homelab.yml
src/: http_entry.rs  lib.rs  main.rs
src/hub/: auth.rs  cmd.rs  mod.rs  msg.rs  room.rs
static/: index.html
static/js/: blockies.js  index.mjs
static/styles/: index.css
