[package]
name = "tzhs-chat"
version = "0.1.0"
authors = ["Dowland Aiello <dowlandaiello@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
actix = "0.10.0"
actix-web-actors = "3.0.0"
futures = "0.3.14"
futures-util = "0.3.14"
log = "0.4.14"
env_logger = "0.8.3"
tokio = { version = "1.4.0", features = ["full"] }
oauth2 = { version = "3.0.0", features = ["futures-03", "reqwest-010"], default-features = false }
ed25519-dalek = { version = "1.0.1", features = ["default", "serde"] }
rand = "0.7"
ring = { version = "0.16.20", features = ["alloc", "dev_urandom_fallback", "std"] }
blake3 = "0.3.7"
serde = "1.0.125"
bincode = "1.3.3"
actix-files = "0.5.0"
base64 = "0.13.0"
awc = { version = "2.0.3", features = ["default", "rustls"] }

[lib]
name = "tzc"
path = "src/lib.rs"
